@@ -12,6 +12,9 @@ Here is a history of user visible changes to Mailman.
     - The BLOCK_SPAMHAUS_LISTED_DBL_SUBSCRIBE feature added in 2.1.27 was
       not working.  This is fixed.  (LP: #1779774)
 
+    - Escaping of HTML entities for the web UI is now done more selectively.
+      (LP: #1779445)
+
 2.1.27 (22-Jun-2018)
 
   Security
